# Socket.IO.Server.CPP

./: CMakeLists.txt  LICENSE  README.md  Socket.IO.Server.sln
Socket.IO.Server/: ReadMe.txt  SioEvent.cpp  SioEvent.h  SioEventAdapter.h  Socket.IO.Server.cpp  Socket.IO.Server.vcxproj  Socket.IO.Server.vcxproj.filters  SocketIOClientHandler.h  SocketIOMessage.h  SocketIOPacket.cpp  SocketIOPacket.h  WebSocketServer.h  packages.config  stdafx.cpp  stdafx.h  targetver.h
